--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "axios": "^1.7.9",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.0.1",
+    "googleapis": "^144.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
