--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.2",
     "googleapis": "^144.0.0"
   }
