--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "codetribers-info",
   "version": "1.0.0",
+  "description": "Codetribers Info Service",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["google-sheets", "firebase", "firestore"],
+  "author": "Your Name",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.2",
